--- a/bus_mall.html
+++ b/bus_mall.html
@@ -3,14 +3,17 @@
   <head>
     <title>Bus Mall</title>
     <link href="bus_mall.css" rel="stylesheet"></link>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js"></script>
   </head>
   <body>
-    <div id="threepics"></div>
+    <div class="header">
+      <h1>Welcome to Bus Mall</h1>
+    </div>
+  <div class="pictures">
+    <div class="container" id="threepics"></div>
+  </div>
     <div id="results"></div>
-<div class="header">
-  <h1>Welcome to Bus Mall</h1>
-</div>
-
+    <canvas id="results_chart" width="800px" height="400px"></canvas>
 <script src="bus_mall.js">
 
 </script>
